# tantex

./: .gitignore  README.md  mix.exs
config/: config.exs
lib/: tantex.ex
lib/tantex/: encoder.ex  encoding.ex  field.ex  index.ex  jason_encoder.ex  native.ex
native/tantex_native/: Cargo.toml  README.md
native/tantex_native/src/: atoms.rs  lib.rs  tantex_error.rs  utils.rs  wrapper.rs
native/tantex_native/src/query/: mod.rs  query_params.rs
native/tantex_native/src/schema/: doc_action.rs  field_config.rs  index.rs  mod.rs  schema_index.rs  token_type.rs
test/: tantex_test.exs
