[package]
name = "tantex_native"
version = "0.1.0"
authors = []
edition = "2018"

[lib]
name = "tantex_native"
path = "src/lib.rs"
crate-type = ["dylib"]

[dependencies]
rustler = "0.18.0"
rustler_codegen = "0.18.0"
lazy_static = "1.0"
tantivy = "0.8.0"
erl_term = { git = "https://github.com/elbow-jason/erl_term.rs", branch = "master" }